<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PHMS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to the Personal Health Monitoring System!</string>
    <string name="password">Password</string>
    <string name="options">Please login or register:</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="recover">Recover</string>
    <string name="title_activity_register">Register</string>
    <string name="firstname">First Name:</string>
    <string name="lastname">Last Name:</string>
    <string name="username">Username:</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email Address:</string>
    <string name="phone">Phone Number:</string>
    <string name="height">Height: (ft)</string>
    <string name="inches">(in)</string>
    <string name="weight">Weight:</string>
    <string name="age">Age:</string>
    <string name="docemail">Doctor\'s Email:</string>
    <string name="gender">Gender:</string>
    <string name="security">Security Question: What is your mother\'s maiden name?</string>
    <string name="recoQuestion">Please enter your account email:</string>
    <string name="recoInfo">If there is an account on file with this email, an email will be sent out 
	    					that will allow you to reset your password</string>
    <string name="title_activity_recover">Recover</string>
    <string name="ok">OK</string>
    <string name="dialog_message">Test</string>
    <string name="dialog_title">Test</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="vital_signs">Vital Signs</string>
    <string name="medications">Medications</string>
    <string name="main_menu">Main Menu</string>
    <string name="diet_management">Diet Management</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="search_app">Search the App</string>
    <string name="edit_acct">Edit Account</string>
    <string name="logout">Log Out</string>
    <string name="title_activity_medication">Medication</string>
    <string name="title_activity_diet">DietActivity</string>
    <string name="little_to_noExcersice">Little to no Exercise</string>
    <string name="light_exercise">Light Exercise (1&#8211;3 days per week)</string>
    <string name="moderate_exercise">Moderate exercise (3&#8211;5 days per week)</string>
    <string name="heavy_exercise">Heavy Exercise (6&#8211;7 days per week)</string>
    <string name="very_heavy_exercise">Very heavy exercise (twice per day, extra heavy workouts)</string>
    <string name="suggestedCalorie_test">Suggested Calorie Intake: %.2f</string>
    <string name="today_calories">Today\'s Calories: %.2f</string>
    <string name="calorie_today">Calorie Intake Today: %.2f</string>
    <string name="calorie_burned_today">Calorie Burned Today: %.2f</string>
    <string name="display_food">Food: %s</string>
    <string name="display_quantity">Quantity: %s</string>
    <string name="display_calories">Calories: %s</string>
    <string name="display_exercise">Exercise:        %s</string>
    <string name="display_burned">  Calories Burned: %s</string>
    <string name="title_activity_food_editor_display">FoodEditor</string>
    <string name="medInstructions">Select a medication to edit:</string>
    <string name="add_food">Add</string>
    <string name="add_exercise">Add</string>
    <string name="total_food">Total Calories: %.2f</string>
    <string name="total_exercise">Total Calories: %.2f</string>
    <string name="total_null">Total: None</string>
    <string name="food">Food</string>
    <string name="exercise">Exercise</string>
    <string name="quantity">Quantity</string>
    <string name="calories">Calories</string>
    <string name="ret">Return</string>
    <string name="title_activity_add_medication">AddMedicationActivity</string>
    <string name="addMedInstructions">Please fill in all the fields:</string>
    <string name="name">Name:</string>
    <string name="datetime">Date/Time:</string>
    <string name="conflictions">Conflictions:</string>
    <string name="dosage">Dosage (Amount):</string>
    <string name="unit">Unit:</string>
    <string name="save">Save</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="searchInstructions">Please enter the term you are searching for:</string>
    <string name="searchType">Please select search type:</string>
    <string name="search">Search</string>
    <string name="resultInfo">Touch the result to access information about it.</string>
    <string name="help">Help</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="action_search">Search</string>
    <string name="action_logout">Logout</string>
    <string name="action_foodEditorActivity">Edit Food</string>
    <string name="action_exerciseEditorActivity">Edit Exercise</string>
    <string name="view_conflictions">View Conflictions</string>
    <string name="view_alarm_times">View/Delete Times</string>
    <string name="add_days_time">Add Days/Time</string>
    <string name="settings">Settings</string>

    <string-array name="searchchoices">
        <item>Ad-Hoc</item>
        <item>Diet</item>
        <item>Vital Signs</item>
        <item>Medications</item>
        <item>Google Search</item>
    </string-array>

    <string name="title_activity_result">Result</string>
    <string name="title_activity_food_editor">Food Editor</string>
    <string name="title_activity_exercise_editor">Exercise Editor</string>
    <string name="title_activity_vital_signs">Vital Signs</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_add_alert">Add Alert</string>
    <string name="title_activity_alarm_receiver">AlarmReceiver</string>
    <string name="title_activity_alert">Alert</string>
    <string name="title_activity_communications">Communications</string>
    <string name="title_activity_repeating_alarm">Repeating Alarm</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_edit_account">Edit Account</string>
    <string name="title_activity_edit_medication">Edit Medication</string>

</resources>
