<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/display_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calorie_today"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right" >

        <TextView
            android:id="@+id/foodtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="155dp"
            android:layout_height="match_parent" >
        </LinearLayout>

        <TextView
            android:id="@+id/quantitytv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:id="@+id/calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/calories"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <TextView
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="1"
        android:text="There are currently no Food items present" />

    <ListView
        android:id="@+id/food_list"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_weight="1" >
    </ListView>

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_null"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help" />

        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="match_parent"
            android:orientation="vertical" >
        </LinearLayout>

        <Button
            android:id="@+id/add_food_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addFood"
            android:text="@string/add_food" />

        

    </LinearLayout>

</LinearLayout>