<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/display_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calorie_burned_today"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right" >

        <TextView
            android:id="@+id/exercisetv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent" >
        </LinearLayout>

        <TextView
            android:id="@+id/calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/calories"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <TextView
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="1"
        android:text="There are currently no Exercise items present" />

    <ListView
        android:id="@+id/exercise_list"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_weight="1"
        android:longClickable="true" >

    </ListView>

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_null"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help" />

        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="match_parent"
            android:orientation="vertical" >
        </LinearLayout>

        <Button
            android:id="@+id/add_exercise_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addexercise"
            android:text="@string/add_exercise" />

    </LinearLayout>

</LinearLayout>