<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/displayFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_food"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/displayQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_quantity"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/displayCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_calories"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>
